[Doc] Add meaning of 0 for variables (#53714)
(cherry picked from commit b42eff7ae3538bc2e4e6bba68fb959d7089086a7)

# Conflicts:
#	.clang-format
#	.clang-tidy
#	.github/CODEOWNERS
#	.github/PULL_REQUEST_TEMPLATE.md
#	.github/workflows/approve-checker.yml
#	.github/workflows/ci-doc-checker.yml
#	.github/workflows/ci-merged-sonarcloud-fe.yml
#	.github/workflows/ci-merged.yml
#	.github/workflows/ci-pipeline-branch.yml
#	.github/workflows/ci-pipeline.yml
#	.github/workflows/ci-report.yml
#	.github/workflows/ci-sync.yml
#	.github/workflows/inspection-pipeline.yml
#	.github/workflows/inspection-reusable-pipeline.yml
#	.github/workflows/label-action.yml
#	.github/workflows/notify.yml
#	.github/workflows/pr-checker.yml
#	.github/workflows/release-docker-image.yml.example
#	.github/workflows/sonarcloud-be-build.yml
#	.gitignore
#	.mergify.yml
#	CONTRIBUTING.md
#	README.md
#	be/.gitignore
#	be/CMakeLists.txt
#	be/src/agent/agent_common.h
#	be/src/agent/agent_server.cpp
#	be/src/agent/agent_server.h
#	be/src/agent/agent_task.cpp
#	be/src/agent/agent_task.h
#	be/src/agent/finish_task.cpp
#	be/src/agent/heartbeat_server.cpp
#	be/src/agent/heartbeat_server.h
#	be/src/agent/publish_version.cpp
#	be/src/agent/report_task.cpp
#	be/src/agent/resource_group_usage_recorder.cpp
#	be/src/agent/task_worker_pool.cpp
#	be/src/agent/task_worker_pool.h
#	be/src/agent/utils.cpp
#	be/src/agent/utils.h
#	be/src/bench/CMakeLists.txt
#	be/src/bench/block_cache_bench.cpp
#	be/src/bench/chunks_sorter_bench.cpp
#	be/src/bench/csv_reader_bench.cpp
#	be/src/bench/get_dict_codes_bench.cpp
#	be/src/bench/orc_column_reader_bench.cpp
#	be/src/bench/parquet_dict_decode_bench.cpp
#	be/src/bench/persistent_index_bench.cpp
#	be/src/bench/runtime_filter_bench.cpp
#	be/src/bench/shuffle_chunk_bench.cpp
#	be/src/block_cache/CMakeLists.txt
#	be/src/block_cache/block_cache.cpp
#	be/src/block_cache/block_cache.h
#	be/src/block_cache/cache_options.h
#	be/src/block_cache/kv_cache.h
#	be/src/block_cache/starcache_wrapp